[tool.poetry]
name = "callie-integrations"
version = "1.0.0"
description = "Enterprise data synchronization platform for Calibrate Network"
authors = ["Calibrate Network <dev@calibratenetwork.com>"]
readme = "README.md"
packages = [{include = "callie", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.31.0"
click = "^8.1.7"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
callie = "callie.cli:main" 